11/17/10 reset custom dielectric material in model.reset
11/17/10 convert DielectricMaterial to Property<T>
11/17/10 implement Battery.reset and Capacitor.reset, use them in DielectricModel.reset
11/17/10 replace Capacitor.plateThickness and plateSideLengthProperty with Capacitor.plateSizeProperty
11/17/10 terminology change: plateThickness -> plateHeight
11/17/10 terminology change: plateSideLength or plateSize -> plateWidth
11/17/10 add Dimension3D to simplify many interfaces related to shapes
11/17/10 remove bogus BoxNode constructor, insure complete initialization of plate and dielectric nodes
11/17/10 fix max spacing between dielectric charges, adjust spacing function exponent so that behavior is unchanged with battery voltage range
# 0.00.46 (46242) Nov 16, 2010
11/16/10 fix background for check boxes in E-Field Detector on Windows
# 0.00.45 (46217) Nov 16, 2010
11/16/10 dev version with minor fixes and internal changes
11/15/10 move createBoxShape to BoxShapeFactory
11/15/10 hide debug shapes for battery and wires when battery is disconnected
11/15/10 don't measure voltage at battery or wires unless the battery is connected 
11/15/10 convert Capacitor model element to Property<T>
11/15/10 convert Battery model element to Property<T>
# 0.00.44 (46188) Nov 15, 2010
11/15/10 use Wire.getShape in WireShapeFactory, so that we're displaying the same shapes used in the voltage model
11/15/10 use CAP_BUTT for wire strokes, adjust battery terminal connection points
11/15/10 put all dev stuff in new developer package
11/15/10 indicate color of shape strokes by setting foreground of developer menu items
11/15/10 enable/disable shape debug via developer menu items
11/15/10 remove portion of bottom wire that is occluded by battery
11/15/10 add battery terminal offsets to shape model, for more precise wire connections
11/15/10 more precise model of positive battery terminal
11/15/10 remove transparency feature from plates, they are always opaque